[basic_targets] Update basic keyboards to include true tablet layout

--- a/release/basic/basic_kbdcherp/source/readme.htm
+++ b/release/basic/basic_kbdcherp/source/readme.htm
@@ -19,7 +19,7 @@ which can be viewed by clicking on the Keyman icon and selecting the On Screen K
 item. The keyboard layout follows the Windows 10 Cherokee Nation Phonetic layout.
 </p>
 
-<p>(c) 2020 SIL International</p>
+<p>(c) SIL International</p>
 
 </body>
 </html>
