--- a/release/basic/basic_kbdsors1/source/welcome/welcome.htm
+++ b/release/basic/basic_kbdsors1/source/welcome/welcome.htm
@@ -35,7 +35,7 @@ layout follows the Windows 10 Sorbian Standard layout.
 	<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
 
 
-<p>© 2009-2020 SIL International</p>
+<p>© SIL International</p>
 
 </body>
 </html>
