--- a/release/basic/basic_kbdsw09/source/readme.htm
+++ b/release/basic/basic_kbdsw09/source/readme.htm
@@ -20,7 +20,7 @@ the Windows 10 Sinhala - wij 9 layout.
 
 </p>
 
-<p>(c) 2009-2020 SIL International</p>
+<p>(c) SIL International</p>
 
 </body>
 </html>
