--- a/release/basic/basic_kbdsw09/source/welcome/welcome.htm
+++ b/release/basic/basic_kbdsw09/source/welcome/welcome.htm
@@ -33,7 +33,7 @@ the Windows 10 Sinhala - wij 9 layout.
 	<p><a href="LayoutU_SRA.png"><img class="keyboard" src="LayoutU_SRA.png" alt="Right ALT Shift state" /></a></p>
 
 
-<p>(c) 2009-2020 SIL International</p>
+<p>(c) SIL International</p>
 
 </body>
 </html>
