--- a/release/basic/basic_kbdinuk2/source/welcome/welcome.htm
+++ b/release/basic/basic_kbdinuk2/source/welcome/welcome.htm
@@ -40,7 +40,7 @@ Currently
 	<p><a href="LayoutU_SRA.png"><img class="keyboard" src="LayoutU_SRA.png" alt="Right ALT Shift state" /></a></p>
 
 
-<p>(c) 2009-2020 SIL International</p>
+<p>(c) SIL International</p>
 
 </body>
 </html>
