--- a/release/basic/basic_kbdlt2/source/readme.htm
+++ b/release/basic/basic_kbdlt2/source/readme.htm
@@ -19,7 +19,7 @@ by clicking on the Keyman icon and selecting the On Screen Keyboard menu item. T
 follows the Windows 10 Lithuanian Standard layout.
 </p>
 
-<p>(c) 2009-2020 SIL International</p>
+<p>(c) SIL International</p>
 
 </body>
 </html>
