--- a/release/basic/basic_kbdlt2/source/welcome/welcome.htm
+++ b/release/basic/basic_kbdlt2/source/welcome/welcome.htm
@@ -30,7 +30,7 @@ follows the Windows 10 Lithuanian Standard layout.
 	<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
 
 
-<p>(c) 2009-2020 SIL International</p>
+<p>(c) SIL International</p>
 
 </body>
 </html>
