--- a/release/basic/basic_kbdsors1/source/readme.htm
+++ b/release/basic/basic_kbdsors1/source/readme.htm
@@ -19,7 +19,7 @@ viewed by clicking on the Keyman icon and selecting the On Screen Keyboard menu 
 layout follows the Windows 10 Sorbian Standard layout.
 </p>
 
-<p>© 2009-2020 SIL International</p>
+<p>© SIL International</p>
 
 </body>
 </html>
