[nlci] Update targets to support tablet layout

--- a/release/nlci/nlci_bengali_winscript/source/welcome/welcome.htm
+++ b/release/nlci/nlci_bengali_winscript/source/welcome/welcome.htm
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8" />
+  <meta charset="utf-8">
     <title>Bengali WinScript (NLCI) Keyboard help</title>
-    <style>
-
-        html, body {
-            font-family: sans-serif;
-            font-size: 100%;
-        }
+    <style type="text/css">
+        p { font: 10pt Tahoma; }
+        h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+        h2 { font: bold 12pt Tahoma; color: #4444cc; }
         samp {
             font-family: Annapurna; 
             font-size:20pt; 
