[targets2] Update a-c keyboards to include tablet

--- a/release/a/aramaic_hebrew/source/readme.htm
+++ b/release/a/aramaic_hebrew/source/readme.htm
@@ -10,8 +10,7 @@ h2 { font: bold 12pt Tahoma; color: #4444cc }
 </style>
 </head>
 <body>
-<h1 style='margin-bottom: 2px'>Aramaic (Hebrew layout) Keyboard</h1>
-<p style='margin-top: 2px'><i>&copy; 2007-2018 SIL International</i></p>
+<h1>Aramaic (Hebrew layout) Keyboard</h1>
 <p>Aramaic (Hebrew layout) is designed for use with Aramaic, Syriac and related languages. The Aramaic (Hebrew layout) keyboard was originally created by Illan Gonen and is based on the Hebrew standard keyboard layout.</p>
 
 <p>The fonts included with these keyboards have been provided by <a target='_blank' 
