--- a/release/athinkra/athinkra_vai/source/welcome/welcome.htm
+++ b/release/athinkra/athinkra_vai/source/welcome/welcome.htm
@@ -44,7 +44,7 @@
 	<h3>Shift Right ALT</h3>
 	<p><a href="LayoutU_SRA.png"><img class="keyboard" src="LayoutU_SRA.png" alt="Shift Right ALT state" /></a></p>
 
-<p>(c) 2008-2020 Athinkra, LLC</p>
+<p>(c) Athinkra, LLC</p>
 
 </body>
 </html>
