--- a/release/athinkra/athinkra_vai_typewriter/source/readme.htm
+++ b/release/athinkra/athinkra_vai_typewriter/source/readme.htm
@@ -17,7 +17,7 @@
     A Keyman keyboard for the Vai language of Liberia, developed by the team at Athinkra, LLC. This keyboard uses fewer keystrokes than the "Vai (Athinkra)" keyboard and is more ergonomic. The Dukor and Wakor fonts are a part of the keyboard package and will be installed with the keyboard.
 </p>
 
-<p>(c) 2008-2020 Athinkra, LLC</p>
+<p>(c) Athinkra, LLC</p>
 
 </body>
 </html>
