--- a/release/c/coptic_greek/source/welcome/welcome.htm
+++ b/release/c/coptic_greek/source/welcome/welcome.htm
@@ -61,7 +61,7 @@ and a little Coptic.
 	<p><a href="LayoutU_SRA.png"><img class="keyboard" src="LayoutU_SRA.png" alt="Right ALT Shift state" /></a></p>
 
 
-<p>© 2010-2019 Michael Everson, evertype.com.</p>
+<p>© Michael Everson, evertype.com.</p>
 
 </body>
 </html>
