--- a/release/a/aramaic_hebrew/source/welcome/welcome.htm
+++ b/release/a/aramaic_hebrew/source/welcome/welcome.htm
@@ -1,12 +1,14 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
-<META http-equiv="Content-Type" content="text/html">
+  <meta charset="utf-8">
 <title>Aramaic (Hebrew layout) Keyboard</title>
 <style type="text/css">
-td, p { font: 10pt Tahoma }
+  p { font: 10pt Tahoma; }
+  h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+  h2 { font: bold 12pt Tahoma; color: #4444cc; }
+td { font: 10pt Tahoma }
 td { font-weight: bold;  padding: 2px 10px }
-h1 { font: bold 16pt Tahoma; color: #4444cc }
-h2 { font: bold 12pt Tahoma; color: #4444cc }
 table.display tr .gap { width: 16px; border: none; }
 table.display tr td { font: 10pt Tahoma; border: solid 1px #ccccff; padding: 4px }
 table.display tr th { font: bold 10pt Tahoma; border: solid 1px #ccccff; padding: 4px; text-align: left }
@@ -84,8 +86,7 @@ table.display { border-collapse: collapse; }
     </style>
 </head>
 <body>
-<h1 style='margin-bottom: 2px'>Aramaic (Hebrew layout) Keyboard</h1>
-<p style='margin-top: 2px'><i>&copy; 2007-2018 SIL International</i></p>
+<h1>Aramaic (Hebrew layout) Keyboard</h1>
 
 <p>Aramaic (Hebrew layout) is designed for use with Aramaic, Syriac and related languages. The Aramaic (Hebrew layout) keyboard was originally created by Illan Gonen and is based on the Hebrew standard keyboard layout.</p>
 
