[targets_d-g] Update keyboards to have a tablet layout

--- a/release/e/engram/source/welcome.htm
+++ b/release/e/engram/source/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Start Using Arno's Engram key layout</title>
+  <title>Start Using Engram Keyboard</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<h1>Arno's Engram key layout</h1>
+<h1>Engram Keyboard</h1>
 
 <p>The Engram layout (<a href="https://engram.dev">website</a> and <a href="https://github.com/binarybottle/engram-layout">GitHub repo</a>) 
 is a keyboard layout optimized for comfortable and efficient touch typing in English created by <a href="https://binarybottle.com">Arno Klein</a>, 
@@ -29,7 +29,7 @@ and logic symbols (accessed by the Shift Key):</p>
 &nbsp;&nbsp;&nbsp;&nbsp; gG &nbsp;&nbsp; xX &nbsp;&nbsp; jJ &nbsp;&nbsp; kK &nbsp;&nbsp; -_ &nbsp;&nbsp; ?! &nbsp;&nbsp; rR &nbsp;&nbsp; mM &nbsp;&nbsp; fF &nbsp;&nbsp; pP                 
 </p>
 
-<p>© 2021 Arno Klein</p>
+<p>© Arno Klein</p>
 
 </body>
 </html>
