--- a/release/g/greekclassical/source/welcome/welcome.htm
+++ b/release/g/greekclassical/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Greek Classical Keyboard by Manuel Lopez</title>
+  <title>Start Using Greek Classical</title>
     <link rel="stylesheet" href="style.css" type="text/css" />                             
 	<script src="keyrenderer.js" type="text/javascript"></script>
 	<style type="text/css">
@@ -17,11 +17,8 @@
 </head>
 <body>
 
-<h1>Greek Classical Keyboard by Manuel Lopez</h1>
+<h1>Greek Classical Keyboard</h1>
 
-<p style='margin:0px'>Keyboard &#169; 2003-2020 Manuel A. Lopez and SIL International</p>
-
-<br/>
 <a href="#Overview">Overview</a><br/>
 <a href="#Using">Using this Keyboard</a><br/>
 <a style='margin-left:20px' href="#layout">Keyboard Layout</a><br/>
@@ -226,36 +223,7 @@ for full details on how to type all the Greek Classical keyboard's letters, diac
 This keyboard was created by Manuel Lopez.  SIL International graciously acknowledges the contribution made by the author in developing this keyboard and making it freely available for use with Keyman Desktop and KeymanWeb. His effort has assisted greatly in enabling people to communicate in Classical Greek.
 </p>
 </div>
-<div id="Copyright">
-<h3>Copyright and Terms of Use</h3>
-<p>
-The Greek Classical keyboard layout is licensed under the MIT license, Copyright 2003-2020 Manuel A. Lopez and SIL International.
-</p>
 
-
-<p>
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
-</p>
-<p>
-The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.
-</p>
-<p>
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE.
-
-</p>
-</div>
 
 
 </body>
