--- a/release/e/esperuni/source/welcome/welcome.htm
+++ b/release/e/esperuni/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-<TITLE>Start Using Esperanto Cx Keyboard</TITLE>
+<title>Start Using Esperanto Cx Keyboard</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -11,13 +11,10 @@
 </head>
 <body>
 
-<H1>Start Using Esperanto Cx</H1>
+<h1>Start Using Esperanto Cx</h1>
 
 <p>This keyboard is designed for the Esperanto language. Type an x after cghjsu to accent them.</p>
 
-
-
-<P>&copy; 2001-2020 Gyula Zsigri</P>
-<P>
-</BODY>
-</HTML>
+<p>&copy; Gyula Zsigri</p>
+</body>
+</html>
