--- a/release/a/armenian_mnemonic_r/source/welcome/welcome.htm
+++ b/release/a/armenian_mnemonic_r/source/welcome/welcome.htm
@@ -29,7 +29,7 @@
 <h1>Start Using Armenian Mnemonic R</h1>
 
 <p>
-  <a href="https://github.com/dotland/mnemonic-kb-hy-r">Armenian Mnemonic R</a> 1.0.7.
+  <a href="https://github.com/dotland/mnemonic-kb-hy-r">Armenian Mnemonic R</a>
 </p>
 
 <p style='margin: 16px 0 0 0'>
