[l-m targets] Add tablet for most but not for mozhi

--- a/release/m/maltese/source/welcome/welcome.htm
+++ b/release/m/maltese/source/welcome/welcome.htm
@@ -120,7 +120,7 @@ the accent.</FONT></P>
 
 
 
-<P><FONT FACE="Times New Roman">&copy; 2001-2020 Gyula Zsigri</FONT></P>
+<P><FONT FACE="Times New Roman">&copy; Gyula Zsigri</FONT></P>
 <P>
 </BODY>
 </HTML>
