--- a/release/m/myancode_san/source/readme.htm
+++ b/release/m/myancode_san/source/readme.htm
@@ -17,7 +17,7 @@
   Myanmar Keyboard with sanskrit extensions
 </p>
 
-<p>© 2020 SIL International</p>
+<p>© SIL International</p>
 
 </body>
 </html>
