--- a/release/m/myancode_san/source/welcome/welcome.htm
+++ b/release/m/myancode_san/source/welcome/welcome.htm
@@ -369,6 +369,6 @@
 <h2 id="puntuations">puntuations</h2>
 <p>အ​​င်္ဂလိပ်စာ၌ ပါသော puntuations တို့ကို သက်ဆိုင်ရာနေတို့၌ right alt (alt_gr) key ဖြင့် တွဲ၍ ရိုက်နိုင်ပါသည်။ ( right alt အစား ctrl + alt တွဲသုံးနိုင်ပါသည်။ အ​င်္ဂလိပ်ဂဏာန်းတို့ကိုလည်း shift + right alt တွဲသုံးပြီး ရိုက်နိုင်ပါသည်။</p>
 <br>
-<p>© 2020 SIL International</p>
+<p>© SIL International</p>
 </body>
 </html>
