--- a/release/p/pinyin_typer/source/welcome.htm
+++ b/release/p/pinyin_typer/source/welcome.htm
@@ -31,9 +31,9 @@
 <h1>Keyboard Layout</h1>
 
 <p><b>Unshifted</b></p>
-<img src='taigitelexU_.png' alt='Keyboard Layout'>
+<img src='layoutU_.png' alt='Keyboard Layout'>
 <p><b>Shifted</b></p>
-<img src='taigitelexU_S.png' alt='Keyboard Layout'>
+<img src='layoutU_S.png' alt='Keyboard Layout'>
 
 <!-- Insert Keyboard Layout Images or HTML here -->
 
