--- a/release/c/colchis_latin/source/readme.htm
+++ b/release/c/colchis_latin/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Colchis Latin </h1>
 
 <p>
-    This is a Latin keyboard for transcription of the Lazuri and Mingrelian languages.
+  This is a Latin keyboard for transcription of the Lazuri and Mingrelian languages as used in Georgia.
 </p>
 
 <p>© SIL International</p>
