--- a/release/c/colchis_latin/source/welcome/welcome.htm
+++ b/release/c/colchis_latin/source/welcome/welcome.htm
@@ -15,7 +15,7 @@
 <h1>Start Using Colchis Latin</h1>
 
 <p>
-    This is a Latin keyboard for transcription of the Lazuri and Mingrelian languages.
+  This is a Latin keyboard for transcription of the Lazuri and Mingrelian   languages as used in Georgia.
 </p>
 
 <h1>Keyboard Layout</h1>
