[kirat_rai_inscript] Move keyboard to release

--- a/release/k/kirat_rai_inscript/source/welcome/welcome.htm
+++ b/release/k/kirat_rai_inscript/source/welcome/welcome.htm
@@ -14,7 +14,7 @@
 
 <h1>Start Using Kirat Rai - INSCRIPT</h1>
 
-<p>This is a keyboard for the Kirat Rai script using an Inscript-based layout. Kirat Rai is not yet officially in Unicode. It is expected to go into Unicode 16.0.</p>
+<p>This is a keyboard for the Kirat Rai script using an Inscript-based layout. </p>
 
 <h2>Desktop Keyboard layout</h2>
 	<h3>Default (unshifted)</h3>
