[targets_silt] Add tablet layout to Brase kbds

--- a/release/sil/sil_tai_dam_latin/source/readme.htm
+++ b/release/sil/sil_tai_dam_latin/source/readme.htm
@@ -3,6 +3,12 @@
 <head>
   <meta charset="utf-8">
  <title>Tai Dam Latin (SIL) keyboard</title>
+ <style type="text/css">
+  p { font: 10pt Tahoma; }
+  li { font: 10pt Tahoma; }
+  h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+  h2 { font: bold 12pt Tahoma; color: #4444cc; }
+</style>
 </head>
 <body>
 <h1>Tai Dam Latin (SIL) keyboard</h1>
@@ -17,3 +23,6 @@
 </ul>
 
 <p>This is a practical solution because the letter D never occurs in Tai Dam after a vowel, and the letters R and F only occur in loan words. The alternative approach of placing the tone marks in the corners of the keyboard results in a very heavy load for the little fingers to carry when typing, resulting in severe hand strain.</p>
+
+</body>
+</html>
