--- a/release/sil/sil_tai_dam_lao/source/readme.htm
+++ b/release/sil/sil_tai_dam_lao/source/readme.htm
@@ -3,8 +3,16 @@
 <head>
   <meta charset="utf-8">
  <title>Tai Dam Lao (SIL) keyboard</title>
+ <style type="text/css">
+  p { font: 10pt Tahoma; }
+  h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+  h2 { font: bold 12pt Tahoma; color: #4444cc; }
+</style>
 </head>
 <body>
-<h1>Tai Dam Lao (SIL) keyboard</h1>
+
+  <h1>Tai Dam Lao (SIL) keyboard</h1>
 
 <p>SIL's Tai Dam Lao keyboard is designed for typing the Tai Dam language text using the Lao script. The layout is mapped phonetically onto a US English keyboard. </p>
+</body>
+</html>
