--- a/release/sil/sil_yupik_cyrillic/source/readme.htm
+++ b/release/sil/sil_yupik_cyrillic/source/readme.htm
@@ -3,8 +3,15 @@
 <head>
   <meta charset="utf-8">
  <title>Yupik Cyrillic (SIL) keyboard</title>
+ <style type="text/css">
+  p { font: 10pt Tahoma; }
+  h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+  h2 { font: bold 12pt Tahoma; color: #4444cc; }
+</style>
 </head>
 <body>
 <h1>Yupik Cyrillic (SIL) keyboard</h1>
 
 <p>SIL's Yupik Cyrillic keyboard has been designed for typing the Central Siberian Yupik language in the Cyrillic script (ess-Cyrl). It is based on the layout of an earlier keyboard which had been implemented in the legacy encoding introduced into the SIL language project around 1990, but now implements that layout in Unicode.</p>
+</body>
+</html>
