--- a/release/sil/sil_yupik_cyrillic/source/welcome/welcome.htm
+++ b/release/sil/sil_yupik_cyrillic/source/welcome/welcome.htm
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
 <title>Yupik Cyrillic (SIL) keyboard</title>
 <style type="text/css">
+    p { font: 10pt Tahoma; }
+    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 12pt Tahoma; color: #4444cc; }
         .key { 
             float: left;
             display: block; 
