[targets_sil2] Update 3 keyboards for targets

--- a/release/sil/sil_philippines/source/welcome/welcome.htm
+++ b/release/sil/sil_philippines/source/welcome/welcome.htm
@@ -15,10 +15,11 @@ p.footnote {
 font-family: Charis SIL;
 font-size: small;
 }
-h1,h2,h3 {
-font-family: Charis SIL;
-}
-table {
+h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+h2 { font: bold 12pt Tahoma; color: #4444cc; }
+h3 { font: bold 10pt Tahoma; color: #4444cc; }
+
+      table {
 border-collapse: collapse;
 }
 td {
