--- a/release/sil/sil_tepehuan/source/welcome/welcome.htm
+++ b/release/sil/sil_tepehuan/source/welcome/welcome.htm
@@ -189,7 +189,7 @@
  <tr><td><kbd>e</kbd> + <kbd>~</kbd> + <kbd>~</kbd> + <kbd>~</kbd></td><td> ə~ </td></tr>
 </tbody></table>
 
-<p>© 2008-2020 SIL Mexico</p>
+<p>© SIL Mexico</p>
 
 </body>
 </html>
