--- a/release/sil/sil_philippines/source/readme.htm
+++ b/release/sil/sil_philippines/source/readme.htm
@@ -3,12 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <title>Philippines (SIL) keyboard</title>
+  <style type="text/css">
+    p { font: 10pt Tahoma; }
+    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 12pt Tahoma; color: #4444cc; }
+  </style>
 
 </head>
 <body>
   <div id='readme-eng'>
     <h1>Philippines (SIL) keyboard</h1>
-    <p>©&nbsp;2006-2018 SIL Philippines</p>
+    <p>©&nbsp;SIL Philippines</p>
     <p>This keyboard enables the typing of all Philippine languages. It gives the ability to
 type all the special characters and diacritics in the languages of the Philippines.</p>
   </div>
