--- a/release/sil/sil_tepehuan/source/readme.htm
+++ b/release/sil/sil_tepehuan/source/readme.htm
@@ -17,7 +17,7 @@
     Southern Tepehuan/Durango Unicode keyboard in modified roman or phonetic script. Use this keyboard with fonts such as Doulos SIL. This keyboard includes the Unicode code points for glottal stops U+A78B and U+A78C.
 </p>
 
-<p>© 2008-2020 SIL Mexico</p>
+<p>© SIL Mexico</p>
 
 </body>
 </html>
