--- a/release/sil/sil_tunisian/source/readme.htm
+++ b/release/sil/sil_tunisian/source/readme.htm
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
 	<title>Tunisian Spoken Arabic (SIL) Keyboard Readme</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
-</head>
+    <style type="text/css">
+      p { font: 10pt Tahoma; }
+      h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+      h2 { font: bold 12pt Tahoma; color: #4444cc; }
+    </style>
+  </head>
 <body>
 
 <h1>Tunisian Spoken Arabic (SIL) Keyboard</h1>
-<p>Keyboard &#169; 2016-2018 SIL International</p>
-  <section id='overview'>
-	<h2>Overview</h2>
+
 	<p>Arabic script keyboard for the the Tunisian Spoken Arabic language [aeb].</p>
-  </section>
+
+</body>
+</html>
