--- a/release/sil/sil_tunisian/source/welcome/welcome.htm
+++ b/release/sil/sil_tunisian/source/welcome/welcome.htm
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Tunisian Spoken Arabic (SIL) Keyboard Help</title>
-  </head>
+    <style type="text/css">
+      p { font: 10pt Tahoma; }
+      h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+      h2 { font: bold 12pt Tahoma; color: #4444cc; }
+    </style>
+    </head>
   <body>
     <h1>Tunisian Spoken Arabic (SIL) Keyboard Help</h1>
     <p>Arabic script keyboard for the the Tunisian Spoken Arabic language [aeb].</p>
@@ -12,6 +17,6 @@
     <h2>Shift</h2>
     <p><img src="sil_tunisian_U_S.png" alt="Tunisian Spoken Arabic (SIL) Keyboard: shift"></p>
     <h2>Right ALT</h2>
-    <p><img src="sil_tunisian_U_A.png" alt="Tunisian Spoken Arabic (SIL) Keyboard: ralt"></p>
+    <p><img src="sil_tunisian_U_RA.png" alt="Tunisian Spoken Arabic (SIL) Keyboard: ralt"></p>
   </body>
 </html>
