[targets_np] Remove .js from kps

--- a/release/sil/sil_nigeria_odd_vowels/source/readme.htm
+++ b/release/sil/sil_nigeria_odd_vowels/source/readme.htm
@@ -1,14 +1,15 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
 	<title>Nigeria Odd Vowels (SIL) Keyboard Readme</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
 
 <h1>Nigeria Odd Vowels (SIL) Keyboard</h1>
-<p>Keyboard &#169; 2004-2018 SIL International</p>
-  <section id='overview'>
+
+<section id='overview'>
 	<h2>Overview</h2>
 	<p>This keyboard pairs with two other keyboards to cover the expected needs of most of Nigeria's languages. The three keyboards are identical except that the vowels are treated differently. The vowels on this keyboard are non-standard vowels as well as the standard tone markings. The keyboard also includes standard "hook" (implosives), nasality, tone, and the Naira sign.</p>
 <p>The three keyboards are:</p>
