--- a/release/sil/sil_nigeria_odd_vowels/source/welcome/welcome.htm
+++ b/release/sil/sil_nigeria_odd_vowels/source/welcome/welcome.htm
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Nigeria Odd Vowels (SIL) Keyboard Help</title>
+  <meta charset="utf-8">
+  	<title>Nigeria Odd Vowels (SIL) Keyboard Help</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 
 <body>
   <h1>Nigeria Odd Vowels (SIL) Keyboard</h1>
-  <p>Keyboard &#169; 2004-2018 SIL International</p>
   <section id='overview'>
 	<h2>Overview</h2>
 	<p>This keyboard pairs with two other keyboards to cover the expected needs of most of Nigeria's languages. The three keyboards are identical 
