--- a/release/sil/sil_nigeria_dot/source/readme.htm
+++ b/release/sil/sil_nigeria_dot/source/readme.htm
@@ -1,14 +1,19 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Nigeria Dot (SIL) Keyboard Readme</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
-</head>
+  <meta charset="utf-8">
+  	<title>Nigeria Dot (SIL) Keyboard Readme</title>
+    <style type="text/css">
+      p { font: 10pt Tahoma; }
+      h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+      h2 { font: bold 12pt Tahoma; color: #4444cc; }
+    </style>
+  </head>
 <body>
 
 <h1>Nigeria Dot (SIL) Keyboard</h1>
-<p>Keyboard &#169; 2004-2018 SIL International</p>
-  <section id='overview'>
+
+<section id='overview'>
 	<h2>Overview</h2>
 	<p>This keyboard pairs with two other keyboards to cover the expected needs of most of Nigeria's languages. The three keyboards are identical except that the vowels are treated differently. The vowels on this keyboard can have a dot below them as well as the standard tone markings. The keyboard also includes standard "hook" (implosives), nasality, tone, and the Naira sign.</p>
 <p>The three keyboards are:</p>
