[targets_sil_k-m] Update keyboards for targets

--- a/release/sil/sil_kayah_kali/source/welcome/welcome.htm
+++ b/release/sil/sil_kayah_kali/source/welcome/welcome.htm
@@ -3,6 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Kayah [Kayah Li] (SIL) Keyboard Help</title>
+  <style type="text/css">
+    p { font: 10pt Tahoma; }
+    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 12pt Tahoma; color: #4444cc; }
+  </style>
 </head>
 <body>
   <h1>Kayah [Kayah Li] (SIL) Keyboard Help</h1>
