--- a/release/sil/sil_kayah_latn/source/readme.htm
+++ b/release/sil/sil_kayah_latn/source/readme.htm
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Kayah [Latin] (SIL) Keyboard</title>
-  </head>
+    <style type="text/css">
+      p { font: 10pt Tahoma; }
+      h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+      h2 { font: bold 12pt Tahoma; color: #4444cc; }
+    </style>
+    </head>
   <body>
     <h1>Kayah [Latin] (SIL) Keyboard</h1>
     <p>This keyboard contains all of the characters needed to type Kayah in the Latin Script.</p>
