--- a/release/sil/sil_myanmar_mywinext/source/readme.htm
+++ b/release/sil/sil_myanmar_mywinext/source/readme.htm
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
 <title>myWin Extended (SIL) Keyboard</title>
-<style type='text/css'>
-    * { font-family: Tahoma; font-size:10pt; }
-    h1 { font: bold 12pt Tahoma; color: #800000; }
-    p { margin-left:1em;}
-
-</style>
+<style type="text/css">
+    p { font: 10pt Tahoma; }
+    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 12pt Tahoma; color: #4444cc; }
+  </style>
 </head>
 <body>
 <h1>myWin Extended (SIL) Keyboard</h1>
 <p>Burmese Keyboard for Unicode Encoding. This Layout has been designed to resemble that used by WinMyanmar Systems, however, it is much simplified because of the advantages of Unicode technology. Some keys have changed as a result.
 </p> 
 
+</body>
+</html>
 
