--- a/release/sil/sil_lepcha/source/welcome/welcome.htm
+++ b/release/sil/sil_lepcha/source/welcome/welcome.htm
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
-<head><meta charset="utf-8"/><title lang="en-US">Lepcha (SIL) Keyboard</title>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title lang="en-US">Lepcha (SIL) Keyboard</title>
   <style type="text/css">
   @import url(//fonts.googleapis.com/earlyaccess/notosanslepcha.css);
     table {border: 3px solid black ;}
