--- a/release/sil/sil_myanmar_mywinext/source/welcome/welcome.htm
+++ b/release/sil/sil_myanmar_mywinext/source/welcome/welcome.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="my">
+<html lang="en">
 <head>
+  <meta charset="utf-8">
   <title>myWin Extended (SIL)</title>
   <meta charset="utf-8" />
   <style type="text/css">
