--- a/release/a/armenian_mnemonic/source/options.htm
+++ b/release/a/armenian_mnemonic/source/options.htm
@@ -17,15 +17,26 @@
 <div id='size'>
   <form method='get' action='keyman:ok'>
     <div id='formopt'>
-	<fieldset>
-	<label>Ընտրեք կցագրերի օգտագործումը.</label>
-      <p>
-		<input type='checkbox' value='1' name='option_ligature_ew' id='option_ligature_ew' />
-		<label for='option_ligature_ew'> Միացնել <i>ե ւ</i> կից տառերի համար</label> <br />
-		<input type='checkbox' value='1' name='option_ligature_mv' id='option_ligature_mv' />
-		<label for='option_ligature_mv'> Միացնել <i>մ ն, մ ե, մ ի, վ ն, մ խ</i> կից տառերի համար</label> <br />
-	  </p>
-	</fieldset>
+      <fieldset>
+        <label>Կարգավորեք R, T, P ստեղները.</label>
+        <p>
+          <input type='checkbox' value='1' name='option_key_r_letter_ra' id='option_key_r_letter_ra' />
+          <label for='option_key_r_letter_ra'> R ստեղնով մուտքագրել <i>Ռ, ռ</i> տառերը</label> <br />
+          <input type='checkbox' value='1' name='option_key_t_letter_tyun' id='option_key_t_letter_tyun' />
+          <label for='option_key_t_letter_tyun'> T ստեղնով մուտքագրել <i>Տ, տ</i> տառերը</label> <br />
+          <input type='checkbox' value='1' name='option_key_p_letter_peh' id='option_key_p_letter_peh' />
+          <label for='option_key_p_letter_peh'> P ստեղնով մուտքագրել <i>Պ, պ</i> տառերը</label>
+        </p>
+      </fieldset>
+      <fieldset>
+        <label>Ընտրեք կցագրերի օգտագործումը.</label>
+        <p>
+          <input type='checkbox' value='1' name='option_ligature_ew' id='option_ligature_ew' />
+          <label for='option_ligature_ew'> Միացնել <i>ե ւ</i> կից տառերի համար</label> <br />
+          <input type='checkbox' value='1' name='option_ligature_mv' id='option_ligature_mv' />
+          <label for='option_ligature_mv'> Միացնել <i>մ ն, մ ե, մ ի, վ ն, մ խ</i> կից տառերի համար</label>
+        </p>
+      </fieldset>
 
     </div>
     <p id='buttons'><input id='ok_button' type='submit' value='OK' /> <input id='cancel_button' type='reset' onclick='location.href="keyman:cancel"; return false;' value='Cancel' /></p>
