--- a/release/a/armenian_mnemonic/source/welcome/welcome.htm
+++ b/release/a/armenian_mnemonic/source/welcome/welcome.htm
@@ -47,7 +47,7 @@
     <tr><td><kbd class="key">T</kbd></td><td style='text-align: center;'>Թ</td><td style='text-align: center;'>Ծ</td><td style='text-align: center;'>Ծ</td></tr>
   </tbody>
 </table>
-<br>
+<br />
 <table>
   <thead><tr><th></th><th><kbd class="key">Space</kbd></th><th><kbd class="key">z</kbd></th><th><kbd class="key">Z</kbd></th></tr></thead>
   <tbody>
@@ -55,7 +55,7 @@
     <tr><td><kbd class="key">D</kbd></td><td style='text-align: center;'>Դ</td><td style='text-align: center;'>Ձ</td><td style='text-align: center;'>Ձ</td></tr>
   </tbody>
 </table>
-<br>
+<br />
 <table>
   <thead><tr><th></th><th><kbd class="key">Space</kbd></th><th><kbd class="key">h</kbd></th><th><kbd class="key">H</kbd></th></tr></thead>
   <tbody>
@@ -71,7 +71,7 @@
     <tr><td><kbd class="key">C</kbd></td><td style='text-align: center;'>Ց</td><td style='text-align: center;'>Չ</td><td style='text-align: center;'>Չ</td></tr>
   </tbody>
 </table>
-<br>
+<br />
 <table>
   <thead>
   <tr>
@@ -132,7 +132,7 @@
   </tr>  
   </tbody>
 </table>
-<br>
+<br />
 <table>
   <thead>
   <tr>
@@ -183,7 +183,7 @@
   </tr>  
   </tbody>
 </table>
-<br>
+<br />
 <table>
   <thead>
   <tr>
@@ -242,7 +242,7 @@
   </tr>
   </tbody>
 </table>
-<br>
+<br />
 <table>
   <thead>
   <tr>
@@ -289,11 +289,11 @@
   </tr>
   </tbody>
 </table>
-<br>
+<br />
 
 
 <p>
-The following figures show the <b>Armenian Mnemonic</b> keyboard layout in various modifier key states, where the light gray keys represent dead keys.
+The following figures show the "Armenian Mnemonic" keyboard layout in various modifier key states, where the light gray keys represent dead keys.
 </p>
 
 <h2> Fig. 1. The keyboard without any modifier key pressed</h2>
@@ -313,7 +313,7 @@ The following figures show the <b>Armenian Mnemonic</b> keyboard layout in vario
 
 <br />
 <p>
-The following figures show the <b>Armenian Mnemonic</b> keyboard layout for touch devices in various states.
+The following figures show the "Armenian Mnemonic" keyboard layout for touch devices in various states.
 </p>
 
 <h2> Fig. 6. The default touch keyboard</h2>
@@ -331,7 +331,14 @@ The following figures show the <b>Armenian Mnemonic</b> keyboard layout for touc
 <h2> Fig. 10. The touch keyboard with <kbd>1/2</kbd> key pressed</h2>
 <p><img width="400" src="./touch-HYM-num2.jpg" alt="The touch keyboard with 1/2 key pressed" title="The touch keyboard with 1/2 key pressed" /></p>
 
+<p>
+The following figure shows the options of the "Armenian Mnemonic" keyboard layout. The first group of options allows the input of the keys R, T, P to be configurable. The second group allows to enable ligatures.
+</p>
 
+<h2> Fig. 11. The options of the "Armenian Mnemonic" keyboard layout</h2>
+<p><img width="600" src="./HYM-options.png" alt="The options of the keyboard" title="The options of the keyboard" /></p>
+
+<br />
 <p>© <a href="https://github.com/dotland">Dotland</a></p>
 
 </body>
