[sil_hebr_grek_trans] Update target

--- a/release/sil/sil_hebr_grek_trans/source/readme.htm
+++ b/release/sil/sil_hebr_grek_trans/source/readme.htm
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Hebrew and Greek Transliteration (SIL) Keyboard Readme</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
+  <meta charset="utf-8">
+  <title>Start Using Hebrew and Greek Transliteration (SIL)</title>
+  <style type="text/css">
+    p { font: 10pt Tahoma; }
+    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 12pt Tahoma; color: #4444cc; }
+  </style>
 </head>
 <body>
 
 <h1>Hebrew and Greek Transliteration (SIL) Keyboard</h1>
-<p>Keyboard &#169; 2003-2018 SIL International</p>
-  <section id='overview'>
+
 	<h2>Overview</h2>
 	<p>Hebrew and Greek Transliteration Unicode keyboard for use with any Unicode Windows fonts.</p>
-  </section>
-<h2>Scope and limitations:</h2>
+
+  <h2>Scope and limitations:</h2>
 
 <h3>Greek:</h3>
 
