--- a/release/sil/sil_hebr_grek_trans/source/welcome/welcome.htm
+++ b/release/sil/sil_hebr_grek_trans/source/welcome/welcome.htm
@@ -73,8 +73,8 @@ plus diacritic(s) need for the SIL Hebrew transliteration.</p>
     <p><img src="sil_hebr_grek_trans_U_.png" alt="Hebrew and Greek Transliteration (SIL) Keyboard: default (unshifted)"></p>
     <h2>Shift</h2>
     <p><img src="sil_hebr_grek_trans_U_S.png" alt="Hebrew and Greek Transliteration (SIL) Keyboard: shift"></p>
-    <h2>ALT (unshifted)</h2>
-    <p><img src="sil_hebr_grek_trans_U_A.png" alt="Hebrew and Greek Transliteration (SIL) Keyboard: ralt"></p>
+    <h2>RALT (unshifted)</h2>
+    <p><img src="sil_hebr_grek_trans_U_RA.png" alt="Hebrew and Greek Transliteration (SIL) Keyboard: ralt"></p>
 
 <h1>Keyboard chart for special characters</h1>
 <table style="border: medium none ; border-collapse: collapse;" border="1" cellpadding="0" cellspacing="0">
