[sil_greek_polytonic] Update keyboard

--- a/release/sil/sil_greek_polytonic/source/readme.htm
+++ b/release/sil/sil_greek_polytonic/source/readme.htm
@@ -3,11 +3,14 @@
 <head>
     <meta charset="utf-8">
     <title>Polytonic Greek (SIL) Keyboard</title>
+    <style type="text/css">
+        p { font: 10pt Tahoma; }
+        h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+        h2 { font: bold 12pt Tahoma; color: #4444cc; }
+      </style>
 </head>
 <body>
 <h1>Polytonic Greek (SIL) Keyboard</h1>
-<p>Version 1.5<br>
-Copyright (C) 2002-2019 SIL International</p>
 
 <p>Greek keyboard layout supporting Polytonic Greek, using precomposed characters.</p>
 
