--- a/release/sil/sil_greek_polytonic/source/welcome/welcome.htm
+++ b/release/sil/sil_greek_polytonic/source/welcome/welcome.htm
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>Polytonic Greek (SIL) Keyboard</title>
-    <style>
-        html, body { padding: 0; margin: 4px 4px 0 4px; font-family: sans-serif;}
-        div, p, li { margin-bottom: 8px }
-table.inputSequences {
+    <style type="text/css">
+        p { font: 10pt Tahoma; }
+        h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+        h2 { font: bold 12pt Tahoma; color: #4444cc; }
+    table.inputSequences {
   border: 1px solid #1C6EA4;
   background-color: #FFFFFF;
   /*width: 100%;*/
@@ -63,10 +64,15 @@ table+table {margin-top: 1.0em;}
 
 <h1>Polytonic Greek (SIL) keyboard usage</h1>
 
-<h2>General layout</h2>
+<p>Greek keyboard layout supporting Polytonic Greek, using precomposed characters.</p>
 
-<p><img alt="Normal (default keyboard state)" src="sil_greek_polytonicU_.png"></p>
-<p><img alt="Shift state" src="sil_greek_polytonicU_S.png"></p>
+<h2>Desktop Keyboard layout</h2>
+<h3>Default (unshifted)</h3>
+<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
+<h3>Shift</h3>
+<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
+<h3>Right ALT (unshifted)</h3>
+<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
 
 <h2>Keyboard Assignments</h2>
 <p>The main purpose of the keyboards is to provide a wide range of keying options, so many characters can be entered in multiple ways. If you are typing and make a mistake and use the backspace key to delete characters, the keyboard remembers the context.</p>
@@ -179,6 +185,7 @@ table+table {margin-top: 1.0em;}
 <td>ὰ</td>
 <td>ᾳ</td>
 <td>ϊ</td>
+<td>&#x1FB1;</td>
 </tr>
 <tr>
     <th>Type</th>
@@ -187,6 +194,7 @@ table+table {margin-top: 1.0em;}
     <td>` or \</td>
     <td>!, | , + or _</td>
     <td>"</td>
+    <td>#</td>
 </tr>
 </tbody>
 </table>
@@ -320,6 +328,22 @@ Others can be typed by preceding them with <b class="input">@</b> (the <b class=
     </tbody>
 </table>
 
+<h2>Tablet Keyboard layout</h2>
+<p>The tablet layout follows the basic Desktop keyboard. However, due to the size and number of keys, some characters are hidden in the long press. 
+	Press and hold on the key with a little dot on the top right to reveal and use them.</p>
+
+    <h2>Phone Keyboard layout</h2>
+    <p>Due to the size and number of keys, some characters are hidden in the long press. 
+        Press and hold on the key with a little dot on the top right to reveal and use them.</p>
+    <h3>Default (unshifted)</h3>
+<p><a href="phone-default.png"><img class="keyboard" src="phone-default.png" alt="Default (unshifted) state" /></a></p>
+<h3>Shift</h3>
+<p><a href="phone-shift.png"><img class="keyboard" src="phone-shift.png" alt="Shift state" /></a></p>
+<h3>Numeric</h3>
+<p><a href="phone-numeric.png"><img class="keyboard" src="phone-numeric.png" alt="Numeric state" /></a></p>
+
+<h3>Longpress</h3>
+<p><a href="phone-longpress.png"><img class="keyboard" src="phone-longpress.png" alt="Numeric state" /></a></p>
 
 </body>
 </html>
