[sil_khmer] Update keyboard to support mobile

--- a/release/sil/sil_khmer/source/welcome/welcome.htm
+++ b/release/sil/sil_khmer/source/welcome/welcome.htm
@@ -261,12 +261,19 @@
   <p><a href="LayoutU_CA.png"><img class="keyboard" src="LayoutU_CA.png" alt="CTRL ALT (unshifted) state" /></a></p>
   <h3>CTRL ALT Shift</h3>
   <p><a href="LayoutU_SCA.png"><img class="keyboard" src="LayoutU_SCA.png" alt="CTRL ALT Shift state" /></a></p>
-  <h2>Touch layouts</h2>
+
+  <h2>Mobile/tablet layouts</h2>
   <h3>Default (unshifted)</h3>
-  <p><a href="M_1.png"><img class="keyboard" src="M_1.png" alt="Default (unshifted) state" /></a></p>
+  <p>Due to the size and number of keys, some characters are hidden in the long press. 
+    Press and hold on the key with a little dot on the top right to reveal and use them.</p>
+
+  <p><a href="tablet-default.png"><img class="keyboard" src="tablet-default.png" alt="Default (unshifted) state" /></a></p>
   <h3>Shift</h3>
-  <p><a href="M_2.png"><img class="keyboard" src="M_2.png" alt="Shift state" /></a></p>
-  <p>© 2002-2024 SIL International</p>
+  <p><a href="tablet-shift.png"><img class="keyboard" src="tablet-shift.png" alt="Shift state" /></a></p>
+  <h3>ALT</h3>
+  <p><a href="tablet-alt.png"><img class="keyboard" src="tablet-alt.png" alt="ALT state" /></a></p>
+  <h3>ALT Shift</h3>
+  <p><a href="tablet-alt-shift.png"><img class="keyboard" src="tablet-alt-shift.png" alt="ALT Shift state" /></a></p>
 
 </body>
 
