--- a/release/m/mozhi_malayalam/source/readme.htm
+++ b/release/m/mozhi_malayalam/source/readme.htm
@@ -1,37 +1,20 @@
 <!DOCTYPE html>
-<html alng="en">
-
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
+  <meta charset="utf-8">
     <title>Mozhi Malayalam Keyman Keyboard</title>
-</head>
+    <style type="text/css">
+        p { font: 10pt Tahoma; }
+        h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+        h2 { font: bold 12pt Tahoma; color: #4444cc; }
+      </style>
+    </head>
+    <body>
 
-<body>
-    <style>
-        kbd {
-            /* Source: https://www.rgagnon.com/jsdetails/js-nice-effect-the-KBD-tag.html*/
-            margin: 0px 0.1em;
-            padding: 0.1em 0.6em;
-            border-radius: 3px;
-            border: 1px solid rgb(204, 204, 204);
-            color: rgb(51, 51, 51);
-            line-height: 1.4;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 12px;
-            display: inline-block;
-            box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2), inset 0px 0px 0px 2px #ffffff;
-            background-color: rgb(247, 247, 247);
-            -moz-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2), 0 0 0 2px #ffffff inset;
-            -webkit-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2), 0 0 0 2px #ffffff inset;
-            -moz-border-radius: 3px;
-            -webkit-border-radius: 3px;
-            text-shadow: 0 1px 0 #fff;
-        }
-    </style>
     <h1>Mozhi Malayalam Keyman Keyboard</h1>
 
-    <p>Mozhi is arguably the most popular keyboard layout used by regular netisons for keyboarding Malayalam script. Its wide acceptance is primarilty due to its intuitive design, which match very close to the way people write Malayalam using the Latin alphabets.
-        So this is mainly a transliteration type scheme and it was originally developed for Varamozhi Application.</p>
+    <p>Mozhi is arguably the most popular keyboard layout used by regular netisons for keyboarding Malayalam script. Its wide acceptance is primarilty due to its intuitive design, which match very close to the way people write Malayalam using the Latin alphabets.</p>
+    <p>So this is mainly a transliteration type scheme and it was originally developed for Varamozhi Application.</p>
 
 </body>
 </html>  
