[galaxie_positional] Update 2 keyboards and package

--- a/release/g/galaxie_greek_positional/source/readme.htm
+++ b/release/g/galaxie_greek_positional/source/readme.htm
@@ -1,18 +1,18 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd" />
-<html>
-
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta charset="utf-8">
     <title>Galaxie Greek (Phonetic) Keyboard</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
-</head>
-
-<body>
+    <style type="text/css">
+        p { font: 10pt Tahoma; }
+        h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+        h2 { font: bold 12pt Tahoma; color: #4444cc; }
+      </style>
+    </head>
+    <body>
+    
 
     <h1>Galaxie Greek (Phonetic) Keyboard</h1>
-
-    <p style='margin:0px'>Keyboard &#169; 2004-2018 Galaxie Software and SIL International</p>
-
 
     <p>This keyboard layout is designed for Koine Greek, a trade language of the ancient Mediterranean and the language of the New Testament and Septuagint Scriptures. </p>
 
