--- a/release/packages/galaxie_greek_hebrew_positional/source/readme.htm
+++ b/release/packages/galaxie_greek_hebrew_positional/source/readme.htm
@@ -1,16 +1,17 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>Galaxie Greek/Hebrew (Positional) Keyboard Package</title>
-  <link rel="stylesheet" href="style.css" type="text/css" />
+  <meta charset="utf-8">
+  <title>Galaxie Greek/Hebrew (Positional) Keyboard   <style type="text/css">
+    p { font: 10pt Tahoma; }
+    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 12pt Tahoma; color: #4444cc; }
+  </style>
 </head>
 <body>
 
 <h1>Galaxie Greek/Hebrew (Positional) Keyboard Package</h1>
 
-<p style='margin:0px'>Keyboard &#169; 2004-2018 Galaxie Software and SIL International.</p>
-       
 <p>This package includes 2 positional keyboards called: Galaxie Greek (Phonetic) and 
 Galaxie Hebrew (Positional).</p>
 
