Second submission of the oui-ougr-143 keyboard
Compliant with Keyman

--- a/release/o/oui_ougr_143/source/readme.htm
+++ b/release/o/oui_ougr_143/source/readme.htm
@@ -15,9 +15,38 @@
 <h1>oui_ougr_143</h1>
 
 <p>
-  [TR] Eski Uygurca Yazısı: Değiştirilmiş Soğd-Arami Ebcedi
-[EN] Old Uyghur Script: Modified Sogdian-Aramaic Abjad Script
-[ZH] 回鶻字母： 亞拉姆-粟特辅音音素文字的修改形式
+[TR] Eski Uygurca Yazısı: (8. ilâ 18. yüzyıl)
+[EN] Old Uyghur Script (8th - 18th centuries)
+[ZH] 回鶻字母： 亞拉姆-粟特辅音音素文字的修改形式 （8至18世纪）
+
+English:
+Old Uyghur Script, also known as the Qocho Script or the Bitig Script,
+is an abjad alphabet hybrid used for writing Old Uyghur, Karakhanid,
+Ottoman Turkish, Mongolian and many more languages across Asia.
+
+Old Uyghur Script can be classified as both an abjad and an alphabet,
+meaning, depending on where it is used, the writing will either feature
+only the consonants (abjad) or all the sounds (alphabet) to convey meaning.
+Old Uyghur Script features only seventeen (or eighteen, depending on how you count)
+glyphs, with three of them serving dual-duty as vowels as well as consonants.
+
+For more information, please heed the
+"Old Uyghur Table of Glyphs and Miscellanea (English).xlsx" file,
+included in the Keyman package in the 'About Old Uyghur' directory.
+
+Türkçe:
+Eski Uygur Yazısı( Kocahoca veya Bitig Yazısı diye de bilinir) Eski Uygurca, Hâkaniye
+Türkçesi, Osmanlı Türkçesi, Moğolca'yı ve Asya kıtası boyunca yazmak için kullanılmış
+ebced ve alfabe karışımı yazı dizgesidir.
+
+Eski Uygur Yazısı hem bir ebced hem de bir alfabe olarak sınıflandırılabilir,
+yani kullanıldığı yere bağlı olarak, yazı ya yalnız ünsüz harfleri (bu hâlde ebced olur)
+ya da tüm harfleri (bu hâlde alfabe olur) içererek anlam iletir.
+Eski Uygur Yazısı yalnız on yedi (sayım biçimine göre on sekiz de olabilir) harf içerir,
+bu harflerden üçü hem ünsüz hem ünlü sesleri temsil eder.
+
+Daha fazla bilgi için lütfen Keyman paketi ile gelen, 'About Old Uyghur' dizinindeki
+"Eski Uygurca Çizelgesi ve Çeşitli Bilgiler (Türkçe).xlsx" dosyasına ilerleyin.
 </p>
 
 <p>Copyright © Kadir Garip</p>
