--- a/release/g/galaxie_hebrew_mnemonic/source/welcome/welcome.htm
+++ b/release/g/galaxie_hebrew_mnemonic/source/welcome/welcome.htm
@@ -38,7 +38,6 @@
 <div id='help'>
  <h1>Galaxie Hebrew (Mnemonic) Keyboard Help</h1>
 
-	<p style='margin:0px'>Keyboard &#169; 2004-2021 Galaxie Software and SIL International</p>
 
 	<br/>
 	<a href="#Overview">Overview</a><br/>
@@ -61,8 +60,6 @@
 		<li>QWERTY US</li>
 		<li>QWERTZ German</li>
 	</ul>	
-
-	<p>This keyboard includes an On Screen Keyboard view, which displays best on a QWERTY US layout.</p>
 
 	<p>This keyboard works with standard Unicode fonts.</p>
 
@@ -2183,7 +2180,7 @@
 <div id="Author">
 	<h3>Keyboard Authorship</h3>
 	<p>
-	This keyboard was created by Hampton Keathley of Galaxie Software.  SIL International graciously acknowledges the contribution made by the author in developing this keyboard and making it freely available for use with Keyman.
+	This keyboard was created by Hampton Keathley of Galaxie Software.  SIL Global graciously acknowledges the contribution made by the author in developing this keyboard and making it freely available for use with Keyman.
 	</p>
 
 </div>
