--- a/release/packages/galaxie_greek_hebrew_mnemonic/source/welcome/greek-welcome.htm
+++ b/release/packages/galaxie_greek_hebrew_mnemonic/source/welcome/greek-welcome.htm
@@ -45,8 +45,6 @@
     <div id='help'>
         <h1>Galaxie Greek (Mnemonic) Keyboard</h1>
 
-        <p style='margin:0px'>Keyboard &#169; 2004-2021 Galaxie Software and SIL International</p>
-
         <br/>
         <a href="#Overview">Overview</a><br/>
         <a href="#UsingGreek">Greek Keyboard</a><br/>
@@ -76,8 +74,6 @@
                     <li>QWERTY US</li>
                     <li>QWERTZ German</li>
                 </ul>
-
-                <p>This keyboard includes an On Screen Keyboard view, which displays best on a QWERTY US layout.</p>
 
                 <p>This keyboard works with standard Unicode fonts.</p>
 
@@ -2221,7 +2217,7 @@
             <div id="Author">
                 <h3>Keyboard Authorship</h3>
                 <p>
-                    This keyboard was created by Hampton Keathley of Galaxie Software. SIL International graciously acknowledges the contribution made by the author in developing this keyboard and making it freely available for use with Keyman Desktop and KeymanWeb. His
+                    This keyboard was created by Hampton Keathley of Galaxie Software. SIL Global graciously acknowledges the contribution made by the author in developing this keyboard and making it freely available for use with Keyman Desktop and KeymanWeb. His
                     effort has assisted greatly in enabling people to communicate in Koine Greek.
                 </p>
 
