--- a/release/packages/galaxie_greek_hebrew_mnemonic/source/welcome/welcome.htm
+++ b/release/packages/galaxie_greek_hebrew_mnemonic/source/welcome/welcome.htm
@@ -1,7 +1,7 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd" />
-<html>
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta charset="utf-8">
   <title>Galaxie Greek/Hebrew (Mnemonic) Keyboard Package</title>
     <link rel="stylesheet" href="style.css" type="text/css" />                             
 	<script src="keyrenderer.js" type="text/javascript"></script>
@@ -18,8 +18,6 @@
 <body>
 
 <h1>Galaxie Greek/Hebrew (Mnemonic) Keyboard Package</h1>
-
-<p style='margin:0px'>Keyboard &#169; 2004-2021 Galaxie Software and SIL Internatinal.</p>
 
 <p>This package includes 2 mnemonic keyboards called: Galaxie Greek (Mnemonic) and 
 Galaxie Hebrew (Mnemonic).</p>
