--- a/release/sil/sil_indic_roman/source/readme.htm
+++ b/release/sil/sil_indic_roman/source/readme.htm
@@ -3,6 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Indic Roman Transliteration (SIL) Keyboard</title>
+  <style type="text/css">
+    p { font: 10pt Tahoma; }
+    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 12pt Tahoma; color: #4444cc; }
+  </style>
 </head>
 <body>
   <h1>Indic Roman Transliteration (SIL) Keyboard</h1>
