[galaxie_mnemonic] Add web target back in

--- a/release/g/galaxie_greek_mnemonic/source/readme.htm
+++ b/release/g/galaxie_greek_mnemonic/source/readme.htm
@@ -29,7 +29,7 @@
         <li>QWERTZ German</li>
     </ul>
 
-
+    <p>This keyboard includes an On Screen Keyboard view, which displays best on a QWERTY US layout.</p>
 </body>
 
 </html>
