--- a/release/g/galaxie_greek_mnemonic/source/welcome/welcome.htm
+++ b/release/g/galaxie_greek_mnemonic/source/welcome/welcome.htm
@@ -2218,7 +2218,7 @@
             <div id="Author">
                 <h3>Keyboard Authorship</h3>
                 <p>
-                    This keyboard was created by Hampton Keathley of Galaxie Software. SIL Global graciously acknowledges the contribution made by the author in developing this keyboard and making it freely available for use with Keyman Desktop and KeymanWeb. His
+                    This keyboard was created by Hampton Keathley of Galaxie Software. SIL Global gratefully acknowledges the contribution made by the author in developing this keyboard and making it freely available for use with Keyman Desktop and KeymanWeb. His
                     effort has assisted greatly in enabling people to communicate in Koine Greek.
                 </p>
 
