--- a/release/g/galaxie_hebrew_mnemonic/source/readme.htm
+++ b/release/g/galaxie_hebrew_mnemonic/source/readme.htm
@@ -22,5 +22,7 @@
 	<li>QWERTZ German</li>
 </ul>	
 
+<p>This keyboard includes an On Screen Keyboard view, which displays best on a QWERTY US layout.</p>
+
 </body>
 </html>
