[todhri] New keyboard - fixes

--- a/release/t/todhri/source/readme.htm
+++ b/release/t/todhri/source/readme.htm
@@ -17,7 +17,7 @@
   This keyboard layout is designed for Albanian using the Todhri script.
 </p>
 
-<p>© SIL International</p>
+<p>© SIL Global</p>
 
 </body>
 </html>
