[sil_jarai] Add tilde to desktop keyboard

--- a/release/sil/sil_jarai/source/welcome/welcome.htm
+++ b/release/sil/sil_jarai/source/welcome/welcome.htm
@@ -23,21 +23,21 @@
 <!-- Insert Keyboard Layout Images or HTML here -->
   <h2>Desktop layout</h2>
 	<h3>Default (unshifted)</h3>
-	<p><a href="desktop_layoutU_.png"><img width="100%" class="keyboard" src="desktop_layoutU_.png" alt="Default (unshifted) state" /></a></p>
+	<p><a href="desktop_layoutU_.png"><img class="keyboard" src="desktop_layoutU_.png" alt="Default (unshifted) state" /></a></p>
 	<h3>Shift</h3>
-	<p><a href="desktop_layoutU_S.png"><img width="100%" class="keyboard" src="desktop_layoutU_S.png" alt="Shift state" /></a></p>
+	<p><a href="desktop_layoutU_S.png"><img class="keyboard" src="desktop_layoutU_S.png" alt="Shift state" /></a></p>
 	<h3>AltGr (Right Alt)</h3>
-	<p><a href="desktop_layoutU_RA.png"><img width="100%" class="keyboard" src="desktop_layoutU_RA.png" alt="AltGr (right Alt) state" /></a></p>
+	<p><a href="desktop_layoutU_RA.png"><img class="keyboard" src="desktop_layoutU_RA.png" alt="AltGr (right Alt) state" /></a></p>
 	
   <h2>Touch layout</h2>
 <p>
 	To stay on the Shift layer, double tap on the Shift key.
 </p>
 	<h3>Default (unshifted)</h3>
-	<p><a href="default.png"><img width="70%" class="keyboard" src="default.png" alt="Default (unshifted) state" /></a></p>
+	<p><a href="default.png"><img class="keyboard" src="default.png" alt="Default (unshifted) state" /></a></p>
 	<h3>Shift</h3>
-	<p><a href="shift.png"><img width="70%" class="keyboard" src="shift.png" alt="Shift state" /></a></p>
+	<p><a href="shift.png"><img class="keyboard" src="shift.png" alt="Shift state" /></a></p>
 	<h3>Symbols</h3>
-	<p><a href="symbol.png"><img width="70%" class="keyboard" src="symbol.png" alt="AltGr (right Alt) state" /></a></p
+	<p><a href="symbol.png"><img class="keyboard" src="symbol.png" alt="AltGr (right Alt) state" /></a></p
 </body>
 </html>
