--- a/release/sil/sil_ywq_plrd/source/welcome/welcome.htm
+++ b/release/sil/sil_ywq_plrd/source/welcome/welcome.htm
@@ -21,7 +21,8 @@
 	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
 	<h3>Shift</h3>
 	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
-
+	<h3>Right ALT (unshifted)</h3>
+	<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
 
 </body>
 </html>
