[old_sogdian] Fix up keyboard submission on behalf of author

--- a/release/o/old_sogdian/source/welcome/welcome.htm
+++ b/release/o/old_sogdian/source/welcome/welcome.htm
@@ -23,7 +23,7 @@ This keyboard is designed for the Old Sogdian script.
 	<h3>Shift</h3>
 	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
 
-<p>© 2024 SIL Global</p>
+<p>© SIL Global</p>
 
 </body>
 </html>
