[portuguese_programmers] update

--- a/release/p/pt_pro/source/readme.htm
+++ b/release/p/pt_pro/source/readme.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
   <meta charset="utf-8">
   <title>Portuguese (Programmers)</title>
@@ -14,10 +14,10 @@
 <h1>Portuguese (Programmers)</h1>
 
 <p>
-    This keyboard layout is designed for Portuguese programmers.  It includes an on screen keyboard which can be viewed by clicking on the Keyman icon and selecting the On Screen Keyboard menu item.
+    Este esquema de teclado foi concebido para programadores portugueses. Inclui um teclado no ecrã que pode ser visualizado clicando no ícone Keyman e selecionando o item de menu Teclado no ecrã.
 </p>
 
-<p>(c) SIL International</p>
+<p>(c) SIL Global</p>
 
 </body>
 </html>
