--- a/release/p/pt_pro/source/welcome/welcome.htm
+++ b/release/p/pt_pro/source/welcome/welcome.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
   <meta charset="utf-8">
   <title>Start Using Portuguese (Programmers)</title>
@@ -11,30 +11,30 @@
 </head>
 <body>
 
-<h1>Start Using Portuguese (Programmers)</h1>
+<h1>Começar a usar Portuguese (Programmers)</h1>
 
 <p>
-    This keyboard layout is designed for Portuguese programmers.  It includes an on screen keyboard which can be viewed by clicking on the Keyman icon and selecting the On Screen Keyboard menu item.
+	Este esquema de teclado foi concebido para programadores portugueses. Inclui um teclado no ecrã que pode ser visualizado clicando no ícone Keyman e selecionando o item de menu Teclado no ecrã.
 </p>
-<p>This keyboard makes use of deadkeys. Typing the deadkey before the base character will output the combined character. For example:</p>
-<p>´a will produce á (available on aAeEiIoOuUyY).</p>
-<p>`a will produce à (available on aAeEiIoOuU).</p>
-<p>¨a will produce ä (available on aAeEiIoOuUy).</p>
-<p>~a will produce ã (available on aAnNoO).</p>
-<p>^a will produce ä (available on aAeEiIoOuU).</p>
+<p>Este teclado faz uso de teclas mortas. Primir a tecla morta antes do caractere base resultará no caractere combinado. Por exemplo:</p>
+<p>´a irá produzir á (disponivel em aAeEiIoOuUyY).</p>
+<p>`a irá produzir à (disponível em aAeEiIoOuU).</p>
+<p>¨a irá produzir ä (disponível em aAeEiIoOuUy).</p>
+<p>~a irá produzir ã (disponível em aAnNoO).</p>
+<p>^a irá produzir â (disponível em aAeEiIoOuU).</p>
 
-<h1>Keyboard Layout</h1>
+<h1>Esquema de teclado</h1>
 
-  <h2>Desktop Keyboard layout</h2>
-	<h3>Default (unshifted)</h3>
+  <h2>Esquema de teclado Desktop</h2>
+	<h3>Predefinição (sem Shift)</h3>
 	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
 	<h3>Shift</h3>
 	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
-	<h3>Right ALT (unshifted)</h3>
+	<h3>ALT GR (sem Shift)</h3>
 	<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
 
 
-<p>(c) SIL International</p>
+<p>(c) SIL Global</p>
 
 </body>
 </html>
