--- a/release/p/pt_international/source/readme.htm
+++ b/release/p/pt_international/source/readme.htm
@@ -14,11 +14,11 @@
 <h1>Portuguese (International)</h1>
 
 <p>
-This keyboard is designed for users familiar with the US keyboard who want to type in Portuguese. 
-Unlike the traditional Portuguese layout, it doesn't use dead keys for accents.
+    Portuguese (International) generated from template.
 </p>
-
-<p>© 2024 SIL Global</p>
+<p>This keyboard is designed for the users familiar with the US keyboard who want to type in Portuguese. 
+Unlike the traditional Portuguese layout, it doesn't use dead keys for accents.</p>
+<p>(c) 2024 SIL Global</p>
 
 </body>
 </html>
