--- a/release/h/hakka/source/readme.htm
+++ b/release/h/hakka/source/readme.htm
@@ -15,11 +15,12 @@
 <h1>hakka</h1>
 
 <p>
-  hakka keyboard for Hakka Pha̍k-và-sṳ̀
+  hakka keyboard for Hakka Pha̍k-và-sṳ̀ and 客家語漢字
 </p>
 <p> e-mail: goetiansoc@proton.me</p>
 
 <p> telegram: https://t.me/cathaylab</p>
+<p> instagram: cathay_lab2024</p>
 <p>Copyright © cathaylab</p>
 
 </body>
