[yezidi] Adjustments per PR review. Make keyboard name more consistent.

--- a/release/y/yezidi/source/welcome/welcome.htm
+++ b/release/y/yezidi/source/welcome/welcome.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Start Using Yezidi</title>
+  <title>Start Using Ezidi</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-<h1>Start Using Yezidi</h1>
+<h1>Start Using Ezidi</h1>
 
-<p>Keyboard for the Yezidi script.</p>
+<p>Keyboard for the Ezidi language using the Yezidi script.</p>
 
 
 <h2>Desktop Keyboard layout</h2>
