--- a/release/y/yo/source/welcome/welcome.htm
+++ b/release/y/yo/source/welcome/welcome.htm
@@ -64,6 +64,10 @@
 	<p><a href="LayoutU_RC.png"><img class="keyboard" src="LayoutU_RC.png" alt="Right CTRL (unshifted) state" /></a></p>
 	<h3>Shift Right CTRL</h3>
 	<p><a href="LayoutU_SRC.png"><img class="keyboard" src="LayoutU_SRC.png" alt="Shift Right CTRL state" /></a></p>
+	<h3>Right ALT Right CTRL (unshifted)</h3>
+	<p><a href="LayoutU_RARC.png"><img class="keyboard" src="LayoutU_RARC.png" alt="Right CTRL (unshifted) state" /></a></p>
+	<h3>Shift Right ALT Right CTRL</h3>
+	<p><a href="LayoutU_SRARC.png"><img class="keyboard" src="LayoutU_SRARC.png" alt="Shift Right CTRL state" /></a></p>
 
 </body>
 </html>
