--- a/release/y/yo/source/welcome/welcome.htm
+++ b/release/y/yo/source/welcome/welcome.htm
@@ -28,7 +28,7 @@
     <h2>Express Yourself with Ease</h2>
     
     <p>
-        The Yorùbá Ìrọ̀rùn keyboard offers a wide range of intuitive key mappings to make typing Yorùbá characters and symbols a breeze. From diacritics to special characters, you'll find it all at your fingertips. For example, pressing [SHIFT RALT+S] or [SHIFT RALT+Z] allows you to effortlessly type 'SH', and [SHIFT RALT+P] or [SHIFT RALT+K] brings 'KP' to your screen.  Making it easy to type Beninese and Nigerian Yorùbá alphabet.
+        The Yorùbá Ìrọ̀rùn keyboard offers a wide range of intuitive key mappings to make typing Yorùbá characters and symbols a breeze. From diacritics to special characters, you'll find it all at your fingertips. For example, pressing [SHIFT RALT+X] or [SHIFT RALT+V] allows you to effortlessly type 'Ọ́' and 'Ẹ́', and [SHIFT RCTRL+X] or [SHIFT RALT+V] brings 'Ọ̀' and 'Ẹ̀' to your screen.  Making it easy to type Nigerian Yorùbá alphabet.
     </p>
     
     <h2>Discover Yorùbá Like Never Before</h2>
