Taiwan austronesian keyboard second submission
I added the computer keyboard settings for the Taiwan Austronesian keyboard and made this keyboard available on the PC.

--- a/release/t/taiwan_austronesian/source/welcome.htm
+++ b/release/t/taiwan_austronesian/source/welcome.htm
@@ -18,8 +18,14 @@
   Taiwan Austronesian keyboard for Taiwan Austronesian languages
 </p>
 
-<h1>Keyboard Layout</h1>
+<p>Pressing TAB to generate specific letters on the computer keyboard</p>
+<p>e + tab > é, ē, and ə</p>
+<p>r + tab > ṟ</p>
+<p>u + tab > ʉ</p>
+<p>i + tab > ɨ</p>
+<p>' + tab > ʼ</p>
 
+<h1>Keyboard Layout</h1>
 <p><b>default</b></p>
 <img src='default.png' alt='phonology'>
 <p><b>shift</b></p>
