taiwan austronesian updating
ready for reviewing

--- a/release/t/taiwan_austronesian/source/welcome.htm
+++ b/release/t/taiwan_austronesian/source/welcome.htm
@@ -23,15 +23,30 @@
 <p>r + tab > ṟ</p>
 <p>u + tab > ʉ</p>
 <p>i + tab > ɨ</p>
-<p>' + tab > ʼ</p>
+<p>6 + tab > ⌃</p>
+<p>' = ʼ</p>
+<p>[ = ⌃</p>
+<p>; = :</p>
 
-<h1>Keyboard Layout</h1>
+<p>Doublepressing ʼ = '</p>
+<p>Doublepressing ⌃ = [</p>
+<p>Doublepressing : = ;</p>
+
+<h1>Touch Layout</h1>
 <p><b>default</b></p>
 <img src='default.png' alt='phonology'>
 <p><b>shift</b></p>
 <img src='shift.png' alt='phonology'>
 <p><b>numeric</b></p>
 <img src='number.png' alt='phonology'>
+
+<h1>Keyboard Layout</h1>
+
+<p><b>Unshifted</b></p>
+<img src='TAU_.png' alt='Keyboard Layout'>
+<p><b>Shifted</b></p>
+<img src='TAU_S.png' alt='Keyboard Layout'>
+
 
 <!-- Insert Keyboard Layout Images or HTML here -->
 
