--- a/release/g/greek_polytonic_plus/source/welcome.htm
+++ b/release/g/greek_polytonic_plus/source/welcome.htm
@@ -79,7 +79,8 @@ div.WordSection1
 <p class=MsoNormal>&nbsp;</p>
 
 <p class=MsoNormal>This package includes one keyboard file, Greek Polytonic
-Plus.&nbsp; It does not include any fonts.&nbsp; Most computers already have fonts
+Plus.&nbsp; This keyboard supports both ancient Greek (code grc) and modern (code el).  Use the drop-down menu to access the one you want when installing the package.  If you use both, install the package twice.
+The package does not include any fonts.&nbsp; Most computers already have fonts
 installed that supply almost all the characters covered by this keyboard. Times
 New Roman and Calibri have them all except the angle brackets, which are found
 in Cambria Math; these fonts are typically installed with Windows.&nbsp; On Mac OS, Times New Roman is perhaps the best choice; it lacks only capital Jot, capital Kai ligature, some of the archaic letters and the angle brackets. If you
@@ -102,7 +103,7 @@ keyboard that was previously in use. &nbsp;On a Mac, use <span
 style='font-size:11.0pt;font-family:"Calibri",sans-serif'>Control-Spacebar</span>
 to select the previous input source, or <span style='font-size:11.0pt;
 font-family:"Calibri",sans-serif'>Control-Option-Spacebar</span> for the next
-input source in the Input menu.  To access the on-screen keyboard in Windows,
+input source in the Input menu.  The globe/fn key can be configured to switch between the two most recently used languages.  To access the on-screen keyboard in Windows,
 type <span style='font-size:11.0pt;font-family:"Calibri",sans-serif'>Alt-Shift-K</span>;
 on Mac OS, choose On-Screen Keyboard under Keyman in the Input Source menu.</p>
 
