--- a/release/gautami/gautami_inditran/source/welcome/welcome.htm
+++ b/release/gautami/gautami_inditran/source/welcome/welcome.htm
@@ -19,8 +19,8 @@
 
 <h2>Transliteration Keymap</h2>
 
-<p><a href="translit.png"><span style='text-decoration:none'><img border=0
-width=826 height=700 src="translit.png" alt="Shift state"></span></a></p>
+<p><a href="translit.png"><span style='text-decoration:none'><img border=3
+width=826 height=700 src="translit.png" alt="Transliteration Keymap"></span></a></p>
 
 <p> Use the PERIOD key [.] to get a dot above/below or a ring below a character, e.g. &nbsp r [.] > ṛ &nbsp ṛ [.] > r̥ &nbsp n [.] > ṅ<br>ṅ [.] > ṇ &nbsp m [.] > ṁ &nbsp ṁ [.] > ṃ &nbsp t [.] > ṭ &nbsp g [.] > ġ etc.
 <br>Use the HYPHEN key [-] to get a macron above or a line below a character or pair of characters, e.g. &nbsp a [-] > ā
@@ -33,7 +33,7 @@ width=826 height=700 src="translit.png" alt="Shift state"></span></a></p>
 
 <p>To access IPA transcription symbols press [\] after typing any base character, e.g. &nbsp a [\] > ə, &nbsp ə [\] > ɑ, &nbsp ɑ [\] > ä.</p>
 
-<p><a href="transcrip.png"><span style='text-decoration:none'><img border=0
-width=826 height=307 src="transcrip.png" alt="Shift state"></span></a></
+<p><a href="transcrip.png"><span style='text-decoration:none'><img border=3
+width=826 height=307 src="transcrip.png" alt="Transcription Keymap"></span></a></
 </body>
 </html>
