--- a/release/f/foochow/source/readme.htm
+++ b/release/f/foochow/source/readme.htm
@@ -19,6 +19,7 @@
 </p>
 <p> e-mail: goetiansoc@proton.me</p>
 <p> telegram group: https://t.me/cathaylab</p>
+<p> instagram: cathay_lab2024</p>
 
 <p>© cathaylab</p>
 
